I added html code

--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>OneLoveOneHeart Weather Forecast</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div class="container">
+        <h1>Weather Consultation</h1>
+        <p>Check the weather of any city around the world.</p>
+        <input type="text" class="city-input" placeholder="Enter a city name" required>
+        <button type="submit" class="explore-btn">Check Weather</button>
+        <div class="weather-icon">&#9729;</div>
+        <div class="weather-info">Temperature: 25°C | Condition: Clear Sky</div>
+    </div>
 </body>
 </html>
